--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <title>Laire</title>
 
     <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="../static/css/owl.carousel.css">
     <link type="text/css" rel="stylesheet" href="../static/css/owl.theme.default.css">
 
@@ -28,7 +28,7 @@
 
 <style>
     h3{
-        style="font-family: 'Josefin Sans', sans-serif;"
+        style="font-family: 'Lato', sans-serif;"
     }
     .arrow {
         text-align: center;
@@ -92,7 +92,7 @@
 
                 </div>
 
-                <ul style="font-family: 'Josefin Sans', sans-serif;" class="main-nav nav navbar-nav navbar-right">
+                <ul style="font-family: 'Lato', sans-serif;" class="main-nav nav navbar-nav navbar-right">
                     <li class="active"><a href="#home">Home</a></li>
                     <li class="button"><a href="#about">About</a></li>
                     <li class="button"><a href="#service">Services</a></li>
@@ -106,7 +106,7 @@
         </nav>
 
 
-        <div class="home-wrapper" style="font-family: 'Josefin Sans', sans-serif;">
+        <div class="home-wrapper" style="font-family: 'Lato', sans-serif;">
             <div class="container">
                 <div class="row">
 
@@ -115,10 +115,13 @@
                             <center>
                                 <img class="img-responsive" style="position:relative;top:20vh;" src="../static/images/laireLogoHead.png" alt="laireLogo">
                                 <p class="white-text"></p>
-                                <button class="white-btn button" href="#about" style="color:#4a505c; border-radius:1vh;">Learn more</button>
-                                <button class="main-btn button" href="#contact" style="color:#4a505c; border-radius:1vh;">Contact us</button>
+                                <a href="#about"><span class="white-btn button" style="color:#4a505c; border-radius:1vh;">Learn more</span></a>
+                                <a href="#contact"><span class="main-btn button" style="color:#4a505c; border-radius:1vh;">Contact us</span></a>
+                              </div>
+                            </div>
+
                                 <center>
-                                    <div class="arrow bounce" style="position:relative;top:2vh;">
+                                    <div class="arrow bounce" style="position:absolute;left:49vw; top:62vh;">
                                         <a class="fa fa-arrow-down fa-2x" href="#about" style="color:white;"></a>
                                     </div>
                                 </center>
@@ -131,21 +134,21 @@
     </header>
 
 
-    <div id="about" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
+    <div id="about" class="section md-padding" style="font-family: 'Lato', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="color:#5d606b; font-family: 'Josefin Sans', sans-serif;">About</h2>
+                    <h2 class="title" style="color:#5d606b; font-family: 'Lato', sans-serif;">About</h2>
                 </div>
 
 
                 <div class="col-md-6">
                     <div class="about">
                         <i class="fa fa-cogs"></i>
-                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Web Design</h3>
+                        <h3 style="font-family: 'Lato', sans-serif;">Web Design</h3>
                         <p style="color: #aeb3c2">Fully personalized, custom websites built with premium development, creative design, and layout responsiveness.</p>
                         <a class="button" href="#service" style="color: #5d606b">Read more</a>
                     </div>
@@ -154,7 +157,7 @@
                 <div class="col-md-6">
                     <div class="about">
                         <i class="fa fa-mobile"></i>
-                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Digital Marketing</h3>
+                        <h3 style="font-family: 'Lato', sans-serif;">Digital Marketing</h3>
                         <p style="color: #aeb3c2">Specialized digital marketing and social media management to build your brand and expand your online visibility.</p>
                         <a class="button" href="#service" style="color: #5d606b">Read more</a>
                     </div>
@@ -166,21 +169,21 @@
 
     </div>
 
-    <div id="service" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
+    <div id="service" class="section md-padding" style="font-family: 'Lato', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="font-family: 'Josefin Sans', sans-serif; color:#5d606b;">What We Do</h2>
+                    <h2 class="title" style="font-family: 'Lato', sans-serif; color:#5d606b;">What We Do</h2>
                 </div>
 
 
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-paint-brush"></i>
-                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Fully Personalized</h3>
+                        <h3 style="font-family: 'Lato', sans-serif;">Fully Personalized</h3>
                         <p>Professional websites to fit what <b>you</b> want. Support for business, personal, portfolio/photography, and e-commerce websites.</p>
                     </div>
                 </div>
@@ -189,7 +192,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-envelope"></i>
-                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Professional Email</h3>
+                        <h3 style="font-family: 'Lato', sans-serif;">Professional Email</h3>
                         <p>Access to the full GSuite email and business management account <b> hosted on your domain </b> for powerful interaction.</p>
                     </div>
                 </div>
@@ -198,7 +201,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-lock"></i>
-                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Security</h3>
+                        <h3 style="font-family: 'Lato', sans-serif;">Security</h3>
                         <p>Premier industry-standard server protection to protect your website from any type of attack, including Distributed Denial of Service attacks.</p>
                     </div>
                 </div>
@@ -207,7 +210,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-search"></i>
-                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Search Engine Optimization</h3>
+                        <h3 style="font-family: 'Lato', sans-serif;">Search Engine Optimization</h3>
                         <p>Our cutting-edge SEO algorithm ensures top rankings on the Search Engines to attract more user traffic and help your business expand.</p>
                     </div>
                 </div>
@@ -216,7 +219,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-line-chart"></i>
-                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Unique Content Model</h3>
+                        <h3 style="font-family: 'Lato', sans-serif;">Unique Content Model</h3>
                         <p>A unique, triple threat content model for you to present only the <b>best</b> version of your company to the world and multiply your digital exposure.</p>
                     </div>
                 </div>
@@ -225,7 +228,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-database"></i>
-                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Database Mapping</h3>
+                        <h3 style="font-family: 'Lato', sans-serif;">Database Mapping</h3>
                         <p>Our custom implementation of database management systems allow a significant performance increase in database queries.</p>
                     </div>
                 </div>
@@ -294,7 +297,7 @@
 
     </div>
 -->
-    <div id="features" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
+    <div id="features" class="section md-padding" style="font-family: 'Lato', sans-serif;">
 
         <div class="bg-img" style="background-image: url('../static/images/whyUsBG.png');">
         </div>
@@ -305,7 +308,7 @@
 
                 <div class="col-md-6" style="color:#2d353b;">
                     <div class="section-header">
-                        <h2 class="title" style="font-family: 'Josefin Sans', sans-serif;color:#2b2b2b;">Why Choose Us</h2>
+                        <h2 class="title" style="font-family: 'Lato', sans-serif;color:#2b2b2b;">Why Choose Us</h2>
                     </div>
                     <p>We put tremendous effort into creating our websites and secure them <br>properly. We are always checking to see if the website is online and make sure that your business can expand as quickly as possible. Laire is here to help
                         you turn your <b>startup</b> into a <b>business</b>.</p>
@@ -369,14 +372,14 @@
     </div>
 
 -->
-    <div id="pricing" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
+    <div id="pricing" class="section md-padding" style="font-family: 'Lato', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="color:#5d606b; font-family: 'Josefin Sans', sans-serif;">Website Pricing</h2>
+                    <h2 class="title" style="color:#5d606b; font-family: 'Lato', sans-serif;">Website Pricing</h2>
                 </div>
 
 
@@ -385,7 +388,7 @@
                         <div class="price-head">
                             <span class="price-title" style="font-weight:bold;">Personal / Resume</span>
                             <div class="price">
-                                <h3 style="font-family: 'Josefin Sans', sans-serif;">$15<span class="duration"></h3>
+                                <h3 style="font-family: 'Lato', sans-serif;">$15<span class="duration"></h3>
                             </div>
                         </div>
                         <ul class="price-content">
@@ -467,14 +470,14 @@
 
     </div>
 
-    <div id="team" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
+    <div id="team" class="section md-padding" style="font-family: 'Lato', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="font-family: 'Josefin Sans', sans-serif;color:#5d606b;">Our Team</h2>
+                    <h2 class="title" style="font-family: 'Lato', sans-serif;color:#5d606b;">Our Team</h2>
                 </div>
 
 
@@ -541,14 +544,14 @@
 
     </div>
 
-    <div id="contact" class="section md-padding" style="background-color:#ebebeb;font-family: 'Josefin Sans', sans-serif;">
+    <div id="contact" class="section md-padding" style="background-color:#ebebeb;font-family: 'Lato', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="font-family: 'Josefin Sans', sans-serif;color:#cfcfcf;">Get in touch</h2>
+                    <h2 class="title" style="font-family: 'Lato', sans-serif;color:#cfcfcf;">Get in touch</h2>
                 </div>
 
 
@@ -607,7 +610,7 @@
 
 
                     <div class="footer-copyright">
-                        <p style="font-family: 'Josefin Sans', sans-serif;">Copyright © 2019 Laire. All Rights Reserved.</p>
+                        <p style="font-family: 'Lato', sans-serif;">Copyright © 2019 Laire. All Rights Reserved.</p>
                     </div>
 
                 </div>
