--- a/templates/home.html
+++ b/templates/home.html
@@ -111,17 +111,17 @@
                 <div class="row">
 
                     <div class="col-md-10 col-md-offset-1">
-                        <div class="home-content" style="position:relative;bottom:12vh;">
+                        <div class="home-content" style="position:relative;bottom:25vh;">
                             <center>
-                                <img class="img-responsive" style="position:relative;top:20vh;" src="../static/images/laireLogoHead.png" alt="laireLogo">
-                                <p class="white-text"></p>
+                                <img class="img-responsive" style="position:relative;left:0.9vh;top:20vh;" src="../static/images/laireLogoHead.png" alt="laireLogo">
+                                <p style="font-size:7vh;"class="white-text">Turn your <b>startup</b> into a <b>business</b>.</p>
                                 <a href="#about"><span class="white-btn button" style="color:#4a505c; border-radius:1vh;">Learn more</span></a>
                                 <a href="#contact"><span class="main-btn button" style="color:#4a505c; border-radius:1vh;">Contact us</span></a>
                               </div>
                             </div>
 
                                 <center>
-                                    <div class="arrow bounce" style="position:absolute;left:49vw; top:62vh;">
+                                    <div class="arrow bounce" style="position:absolute;left:49vw; top:74vh;">
                                         <a class="fa fa-arrow-down fa-2x" href="#about" style="color:white;"></a>
                                     </div>
                                 </center>
