--- a/templates/home.html
+++ b/templates/home.html
@@ -113,7 +113,7 @@
                     <div class="col-md-10 col-md-offset-1">
                         <div class="home-content" style="position:relative;bottom:25vh;">
                             <center>
-                                <img class="img-responsive" style="position:relative;left:0.9vh;top:20vh;" src="../static/images/laireLogoHead.png" alt="laireLogo">
+                                <img class="img-responsive" style="position:relative;left:0.9vh;top:20vh;" src="../static/images/laireLogoHead.png" height=100px alt="laireLogo">
                                 <p></p>
                                 <a href="#about"><span class="white-btn button" style="color:#4a505c; border-radius:1vh;">Learn more</span></a>
                                 <a href="#contact"><span class="main-btn button" style="color:#4a505c; border-radius:1vh;">Contact us</span></a>
