loading, responsive background?

--- a/static/css/mstyle.css
+++ b/static/css/mstyle.css
@@ -1,4 +1,13 @@
-
+@media screen and (max-width: 1200px) {
+  bg-img {
+    background-image: url('../static/images/homeBG6.jpg');
+  }
+}
+@media (min-width:992px) and (max-width:1199px) {
+    bg-img {
+      background-image: url('../static/images/homeBG6.jpg');
+    }
+  }
 
 body {
     font-family: 'Raleway', sans-serif;
