--- a/static/css/mstyle.css
+++ b/static/css/mstyle.css
@@ -1,13 +1,12 @@
-@media screen and (max-width: 1200px) {
+
   bg-img {
     background-image: url('../static/images/homeBG6.jpg');
+background-repeat:no-repeat;
+background-size:contain;
+background-position:center;
   }
-}
-@media (min-width:992px) and (max-width:1199px) {
-    bg-img {
-      background-image: url('../static/images/homeBG5.jpg');
-    }
-  }
+
+
 
 body {
     font-family: 'Raleway', sans-serif;
