--- a/templates/home.html
+++ b/templates/home.html
@@ -76,6 +76,11 @@
   .card {
     border-radius: 10vh;
   }
+
+  .bg-img{
+    background-image:url('../static/images/homeBG6.jpg');
+  }
+
 </style>
 
 <body>
@@ -110,7 +115,7 @@
   <div class="mainst">
     <header id="home">
 
-        <div class="bg-img" style="background-image: url('../static/images/homeBG6.jpg');">
+        <div class="bg-img">
       </div>
 
 
