--- a/templates/home.html
+++ b/templates/home.html
@@ -80,7 +80,13 @@
   .bg-img{
     background-image:url('../static/images/homeBG6.jpg');
   }
+  @media (max-width: 767px) {
+  #ci-hero-11 .widget-wrap , #ci-hero-12 .widget-wrap {
 
+      background-attachment: initial;
+
+  }
+  }
 </style>
 
 <body>
