--- a/templates/home.html
+++ b/templates/home.html
@@ -80,12 +80,11 @@
   .bg-img{
     background-image:url('../static/images/homeBG6.jpg');
   }
-  @media (max-width: 767px) {
-  #ci-hero-11 .widget-wrap , #ci-hero-12 .widget-wrap {
-
+  @media (max-width: 1000px) {
+  .bg-img {
       background-attachment: initial;
-
   }
+
   }
 </style>
 
