--- a/templates/home.html
+++ b/templates/home.html
@@ -82,7 +82,7 @@
   }
   @media (max-width: 1000px) {
   .bg-img {
-      background-attachment: initial;
+    background-image:url('../static/images/logo.png')
   }
 
   }
