--- a/templates/home.html
+++ b/templates/home.html
@@ -82,7 +82,9 @@
   }
   @media (max-width: 1000px) {
   .bg-img {
-    background-image:url('../static/images/logo.png')
+background-repeat:no-repeat;
+background-size:contain;
+background-position:center;
   }
 
   }
