--- a/templates/home.html
+++ b/templates/home.html
@@ -76,6 +76,7 @@
   .card {
     border-radius: 10vh;
   }
+
 </style>
 
 <body>
@@ -110,7 +111,7 @@
   <div class="mainst">
     <header id="home">
 
-        <div class="bg-img" style="background-image: url('../static/images/homeBG6.jpg');">
+        <div class="bg-img" style="background: url('../static/images/homeBG6.jpg') center center cover no-repeat fixed;">
       </div>
 
 
