--- a/templates/home.html
+++ b/templates/home.html
@@ -76,7 +76,13 @@
   .card {
     border-radius: 10vh;
   }
+  .bg-img{
+background-image: url('../static/images/homeBG6.jpg');
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
 
+  }
 </style>
 
 <body>
@@ -111,7 +117,7 @@
   <div class="mainst">
     <header id="home">
 
-        <div class="bg-img" style="background: url('../static/images/homeBG6.jpg') center center cover no-repeat fixed;">
+        <div class="bg-img">
       </div>
 
 
