--- a/templates/home.html
+++ b/templates/home.html
@@ -658,6 +658,7 @@ background-image: url('../static/images/homeBG6.jpg');
 
 
   </div>
+  <!--<script type="text/javascript" src="../static/js/pre2.js"></script>-->
   <script type="text/javascript" src="../static/js/jquery.min.js"></script>
   <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="../static/js/owl.carousel.min.js"></script>
