--- a/templates/home.html
+++ b/templates/home.html
@@ -78,7 +78,7 @@
   }
   .bg-img{
 background-image: url('../static/images/homeBG6.jpg');
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center center;
     background-size: cover;
 
