--- a/templates/home.html
+++ b/templates/home.html
@@ -77,20 +77,30 @@
     border-radius: 10vh;
   }
   .bg-img{
-background-image: url('../static/images/homeBG6.jpg');
     background-attachment: scroll;
     background-position: center center;
     background-size: cover;
+  }
 
+  body {
+    opacity: 1;
+    transition: 2.5s opacity;
+  }
+
+  body.fade {
+      opacity: 0;
+      transition: none;
   }
 </style>
 
 <body>
-
+  <script>
+    document.body.classList.add('fade');
+  </script>
   <div class="mainst">
     <header id="home">
 
-        <div class="bg-img">
+        <div class="bg-img" style="    background-image: url('../static/images/homeBG6.jpg');">
       </div>
 
 
@@ -321,7 +331,7 @@ background-image: url('../static/images/homeBG6.jpg');
 -->
   <div id="features" class="section md-padding" style="font-family: 'Lato', sans-serif;">
 
-    <div class="bg-img" style="background-image: url('../static/images/whyUsBG.png');">
+    <div class="bg-img" style="background-image:url('../static/images/whyUsBG.png');">
     </div>
 
     <div class="container">
@@ -658,6 +668,11 @@ background-image: url('../static/images/homeBG6.jpg');
 
 
   </div>
+  <script>
+    document.addEventListener("DOMContentLoaded", function(e) {
+      document.body.classList.remove('fade');
+    });
+  </script>
   <!--<script type="text/javascript" src="../static/js/pre2.js"></script>-->
   <script type="text/javascript" src="../static/js/jquery.min.js"></script>
   <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
