--- a/templates/home.html
+++ b/templates/home.html
@@ -331,7 +331,7 @@
 -->
   <div id="features" class="section md-padding" style="font-family: 'Lato', sans-serif;">
 
-    <div class="bg-img" style="background-image:url('../static/images/whyUsBG.png');">
+    <div class="bg-img" style="background-image:url('https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80');">
     </div>
 
     <div class="container">
