--- a/templates/home.html
+++ b/templates/home.html
@@ -331,7 +331,7 @@
 -->
   <div id="features" class="section md-padding" style="font-family: 'Lato', sans-serif;">
 
-    <div class="bg-img" style="background-image:url('https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80');">
+    <div class="bg-img" style="background-image:url('../static/images/whyUsBG.jpeg');">
     </div>
 
     <div class="container">
@@ -340,25 +340,26 @@
 
         <div class="col-md-6" style="color:#2d353b;">
           <div class="section-header">
-            <h2 class="title" style="font-family: 'Lato', sans-serif;color:#2b2b2b;">Our commitment to you.</h2>
+            <h2 class="title" style="font-family: 'Lato', sans-serif;color:#FFFFFf;">Our commitment to you.</h2>
           </div>
-          <p>We are committed to <b> building your brand</b>.
+          <p style="color:#FFFFFF;">We are committed to <b> building your brand</b>.
             <br> Whether you want to promote your business, showcase yourself or your work, open your store or start a blog, we design our websites with your satisfaction as the first priority.</p>
 
           <div class="feature">
             <i class="fa fa-check"></i>
-            <p>Every website is tailored specifically to <b> you. </b> We build powerful websites based specifically on what you want.</p>
+            <p style="color:#FFFFFF;">Every website is tailored specifically to <b> you. </b> We build powerful websites based specifically on what you want.</p>
           </div>
           <div class="feature">
             <i class="fa fa-check"></i>
-            <p>Our database management, integrated security, and other website <br> services keep your website safe and growing.</p>
+            <p style="color:#FFFFFF;">Our database management, integrated security, and other website <br> services keep your website safe and growing.</p>
           </div>
           <div class="feature">
             <i class="fa fa-check"></i>
-            <p>We use a <b>unique</b>, triple threat content model to help build<br> your unique online presence on <b> all major social media platforms. </b> </p>
+            <p style="color:#FFFFFF;">We use a <b>unique</b>, triple threat content model to help build<br> your unique online presence on <b> all major social media platforms. </b> </p>
           </div>
-          Our number one priority is your satisfaction.
+        <p style="color:#FFFFFF;"> Our number one priority is your satisfaction.
           <br> We pride ourselves in our ability to communicate effectively with clients - because Laire is committed not only to your brand, but also to you.
+</p>
         </div>
 
       </div>
