--- a/templates/home.html
+++ b/templates/home.html
@@ -100,7 +100,7 @@
   <div class="mainst">
     <header id="home">
 
-        <div class="bg-img" style="    background-image: url('../static/images/homeBG6.jpg');">
+        <div class="bg-img" style="    background-image: url('../static/images/background03.jpg');">
       </div>
 
 
@@ -143,7 +143,7 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="home-content" style="position:relative;bottom:25vh;">
                 <center>
-                  <img class="img-responsive" style="height:30vh;position:relative;top:25vh;" src="../static/images/laireLogoHead.png" alt="laireLogo">
+                  <img class="img-responsive" style="height:30vh;width:35vw;position:relative;top:25vh;" src="../static/images/laireLogoHead.png" alt="laireLogo">
                   <div class="col-md-10 col-md-offset-1" style="position:relative;top:40vh;">
 
                     <a href="#about"><span class="white-btn button" style="color:#4a505c; border-radius:1vh;">Learn more</span></a>
@@ -331,16 +331,16 @@
 -->
   <div id="features" class="section md-padding" style="font-family: 'Lato', sans-serif;">
 
-    <div class="bg-img" style="background-image:url('https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80');">
+    <div class="bg-img" style="background-image:url('../static/images/background04.jpg');">
     </div>
 
     <div class="container">
 
       <div class="row">
 
-        <div class="col-md-6" style="color:#2d353b;">
+        <div class="col-md-6" style="color:white;">
           <div class="section-header">
-            <h2 class="title" style="font-family: 'Lato', sans-serif;color:#2b2b2b;">Our commitment to you.</h2>
+            <h2 class="title" style="font-family: 'Lato', sans-serif;color:white;">Our commitment to you.</h2>
           </div>
           <p>We are committed to <b> building your brand</b>.
             <br> Whether you want to promote your business, showcase yourself or your work, open your store or start a blog, we design our websites with your satisfaction as the first priority.</p>
@@ -420,7 +420,7 @@
             <div class="price-head">
               <span class="price-title" style="font-weight:bold;">Personal / Resume </span>
               <div class="price">
-                <h3 style="font-family: 'Lato', sans-serif;">$15<span class="duration"></h3>
+                <h3>$15<span class="duration"></h3>
               </div>
             </div>
             <ul class="price-content">
@@ -435,8 +435,9 @@
               </li>
               <li>
                 <p>
+                    <br>
                   <i>Includes premium SEO for high exposure.</i>
-                </p>
+              </p><br>
               </li>
             </ul>
 
@@ -463,7 +464,8 @@
                 <p>Retina Ready</p>
               </li>
               <li>
-                <p><i>Includes high quality and retina optimized images. </i></p>
+                  <br>
+                <p><i>Includes high quality, retina optimized images.</i></p><br>
               </li>
             </ul>
 
@@ -490,7 +492,9 @@
                 <p>Retina Ready</p>
               </li>
               <li>
+                  <br>
                 <p><i>Includes GSuite and domain email.</i></p>
+                <br>
               </li>
             </ul>
           </div>
@@ -502,7 +506,7 @@
 
         <p>Pricing is for basic website packages. Domain hosting, Security, and additional features may impact price.
           <br><br>
-          <a href="#contact"><span class="main-btn button" style="color:#4a505c; border-radius:1vh;">Call or email for a quote.</span></a>
+          <a href="#contact"><span class="main-btn button" style="color:#4a505c; border-radius:5vh;">Call or email for a quote.</span></a>
       </center>
     </div>
 
@@ -584,7 +588,7 @@
   </div>
 
   <div id="contact" class="section md-padding" style="font-family: 'Lato', sans-serif;">
-    <div class="bg-img" style="background-image: url('https://images.unsplash.com/photo-1563740553614-7d97452e871a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1568&q=80');">
+    <div class="bg-img" style="background-image: url('../static/images/background07.jpg');">
     </div>
 
     <div class="container">
@@ -592,7 +596,7 @@
       <div class="row">
 
         <div class="section-header text-center">
-          <h2 class="title" style="font-family: 'Lato', sans-serif;color:#000000;">Get in touch</h2>
+          <h2 class="title" style="font-family: 'Lato', sans-serif;color:black;">Get in touch</h2>
         </div>
 
 
@@ -600,8 +604,8 @@
           <div class="col-sm-6">
             <div class="contact">
               <i class="fa fa-instagram"></i>
-              <h3>Instagram</h3>
-              <p style="color:#000000;">@officiallaire</p>
+              <h3 style="color:black;">Instagram</h3>
+              <p style="color:black;">@officiallaire</p>
             </div>
           </div>
         </a>
@@ -610,8 +614,8 @@
           <div class="col-sm-6">
             <div class="contact">
               <i class="fa fa-envelope"></i>
-              <h3>Email</h3>
-              <p style="color:#000000;">hello@laire.org</p>
+              <h3 style="color:black;">Email</h3>
+              <p style="color:black;">hello@laire.org</p>
             </div>
           </div>
         </a>
